# TIME

./: .gitignore  README.md  check_dataset_config.py  check_experiments.py  check_hf_files.py  demo_check_metrics.py  demo_get_window_ts.py  download_from_hf.py  hf_dowload.py  hf_remove.py  hf_upload.py  pyproject.toml  saver.py  upload_to_hf.py
config/: datasets.yaml
config/models/: patch_tst.yaml
data/hf_dataset/IMOS/15T/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/processed_csv/ETTh1/H/: item0.csv
data/processed_csv/IMOS/15T/: item_0.csv  item_1.csv  item_2.csv  item_3.csv  item_4.csv  item_5.csv  item_6.csv
data/processed_summary/ETTh1/H/: item0.json
data/processed_summary/IMOS/15T/: _variate_summary.json  item_0.json  item_1.json  item_2.json  item_3.json  item_4.json  item_5.json  item_6.json
docs/: DATASET_FORMAT.md  DATA_FORMAT.md  EVALUATION.md  FEATURES.md  PRED_CONFIG.md  PREPROCESS.md  SG_PM25_raw.csv
docs/Water_Quality_Darwin_raw/: item_0.csv  item_1.csv  item_2.csv  item_3.csv  item_4.csv  item_5.csv  item_6.csv  item_7.csv
experiments/: chronos2.py  chronos_bolt.py  chronos_t5.py  flowstate.py  kairos_model.py  moirai.py  moirai2.py  moirai_moe.py  moriai2.py  moriai_moe.py  patch_tst.py  patchtst_fm.py  seasonal_naive.py  sundial.py  tabpfn_model.py  tabpfn_ts.py  time_moe.py  timesfm1.0.py  timesfm2.0.py  timesfm2.5.py  tirex_model.py  toto_model.py  visionts++.py  visionts_model.py  visiontspp.py
output/features/IMOS/15T/: test.csv
scripts/: compute_overall_leaderboard.py  run_chronos2.sh  run_chronos_bolt.sh  run_chronos_t5.sh  run_flowstate.sh  run_kairos.sh  run_moirai.sh  run_moirai2.sh  run_moirai_moe.sh  run_patch_tst.sh  run_patchtst_fm.sh  run_seasonal_naive.sh  run_sundial.sh  run_tabpfn.sh  run_tabpfn_ts.sh  run_timesfm.sh  run_timesfm1.sh  run_timesfm2.sh  run_timesfm2p5.sh  run_tirex.sh  run_toto.sh  run_visiontspp.sh
src/timebench/: __init__.py  preprocess.py  remove_correlated.py
src/timebench/config/: datasets.yaml
src/timebench/curation/: imos.py  metro.py
src/timebench/evaluation/: __init__.py  analyze_dataset.py  data.py  dataset_builder.py  metrics.py  saver.py  utils.py
src/timebench/feature/: __init__.py  features.py  features_runner.py
src/timebench/models/: __init__.py  statsforecast_predictor.py
(+25 files in other folders)
